--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://codes.luyaoguagua.top/timer/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://codes.luyaoguagua.top/css/font-awesome.min.css" rel="stylesheet">
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title id="title">2022高考倒计时</title>
-        <meta name="author" content="MicDZ">
-        <meta name="description" content="OI">
         <link rel="stylesheet" href="https://codes.luyaoguagua.top/timer/css/night.css" id="css"/>
         
 		<script src="https://codes.luyaoguagua.top/timer/js/index.js"></script>
